2005-08-17  Jiří Pejchal <jiri.pejchal@gmail.com>

	* cs.po: Initial work on 0.6.0

2005-08-17  Jiří Pejchal <jiri.pejchal@gmail.com>

	* cs.po: Update

2005-08-17  Masao Mutoh <mutoh@highway.ne.jp>

	* ja.po: For 0.6.0

2005-08-17  Ligia Moreira <ligia.moreira@netvisao.pt>

	* pt.po: For 0.6.0

2005-08-17  Joachim Breitner <mail@joachim-breitner.de>

	* de.po: For 0.6.0

2005-08-17  Laurent Sansonetti  <lrz@gnome.org>

	* fr.po: Update
	* Makefile: do not parse the 'macui' directory for translatable strings
	  and make the alexandria.desktop.in.h file is generated by the main 
	  target.

2005-07-18  Jiri Pejchal <jiri.pejchal@gmail.com>

	* cs.po: Initial revision of Czech translation.
 
2005-06-21  Joachim Breitner <mail@joachim-breitner.de>

	* de.po: typos found by Jens Seidel <jensseidel@users.sf.net>

2005-05-20  Dafydd Harries  <daf@muse.19inch.net>

	* ja.po: Apply patch from Akira Yamada which prevents crash for
	  Japanese users and also updates some translations.

2005-04-18  Lucas Rocha <lucasr@im.ufba.br>

	* pt_BR.po: Update

2005-04-15  Joachim Breitner <mail@joachim-breitner.de>

	* de.po: Embarassing Update

2005-04-07  Ligia Moreira <ligia.moreira@netvisao.pt>

	* pt.po: Update

2005-04-06  Joachim Breitner <mail@joachim-breitner.de>

	* de.po: update out of boredom :-)
	* commit-po: let's you specify the update message

2005-03-30  Joachim Breitner <mail@joachim-breitner.de>

	* de.po: Updated

2005-03-27  Mirko Maischberger <mirko@lilik.it>

	* it.po: Updated

2005-03-27  Dafydd Harries  <daf@muse.19inch.net>

	* ja.po: Fix plural forms header.

2005-03-27  Mirko Maischberger <mirko@lilik.it>

	* it.po: Updated

2005-03-26  Masao Mutoh <mutoh@highway.ne.jp>

	* ja.po: Updated

2005-03-26  Joachim Breitner <mail@joachim-breitner.de>

	* commit-po: Included script for committing and loggin

2005-03-26  Laurent Sansonetti  <lrz@gnome.org>

	* fr.po: Updated.

2005-03-26  Dafydd Harries  <daf@muse.19inch.net>

	* cy.po: Updated.
