@@ -1,3 +1,7 @@
+2005-08-18  Laurent Sansonetti  <lrz@gnome.org>
+
+	* genpot.sh: Really remove this file.
+
 2005-08-17  Jiří Pejchal <jiri.pejchal@gmail.com>
 
 	* cs.po: Initial work on 0.6.0
@@ -22,8 +26,7 @@
 
 	* fr.po: Update
 	* Makefile: do not parse the 'macui' directory for translatable strings
-	  and make the alexandria.desktop.in.h file is generated by the main 
-	  target.
+	  and make the alexandria.desktop.in.h file generated by the main target.
 
 2005-07-18  Jiri Pejchal <jiri.pejchal@gmail.com>
 
